# Claude

Pumpfun/: .gitignore  README.md  geckoterminal_scraper_dashboard_working.html  pyproject.toml  requirements.txt  test_system.py  train.py  working_dashboard_with_scoring.html
Pumpfun/pumpfun/: __init__.py  cli.py  config.py  evaluation.py  labels.py  models.py  serve.py
Pumpfun/pumpfun/features/: __init__.py  engineers.py  store.py
